<resources>
    <string name="app_name" translatable="false">Mitwa</string>
    <string name="facebook_app_id" translatable="false">306163406693480</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb306163406693480</string>
    <string name="lbl_read_more" translatable="false"><![CDATA[<font color=\'red\'> read more</font>]]></string>
    <string name="str_loading" translatable="false">Loading&#8230;</string>
    <string name="lbl_verify_otp_dialog" translatable="false">Please enter OTP sent to %s.</string>
    <string name="status_sign_in_failed" translatable="false">Sign-in failed</string>
    <string name="instant_validation" translatable="false">(instant validation)</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="hint_success_message" translatable="false">Tell us how you meet each other.</string>
    <string name="login_with_otp" translatable="false">Login with OTP</string>
    <string name="login" translatable="false">Login</string>
    <string name="signup" translatable="false">Register Free</string>
    <string name="title_activity_deshboard" translatable="false">Dashboard</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="default_font" translatable="false">serif</string>
    <string name="player_error" translatable="false">Error initializing YouTube player: %s</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="error_player" translatable="false">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="lbl_welcome_slide_1" translatable="false">Welcome to\nJeevanjodidar Matrimony</string>
    <string name="lbl_welcome_slide_2" translatable="false">Marriages are made in\nheaven but celebrated on \nearth</string>
    <string name="lbl_welcome_slide_3" translatable="false">We provide the best\nmatch making service</string>
    <string name="err_msg_for_contact_details" translatable="false">This member only shows his/her contact details if you have already sent him/her express interest, and he/she has accepted it.</string>
    <string name="err_msg_no_intenet_connection" translatable="false">Please check your internet connection!</string>
    <string name="err_msg_try_again_later" translatable="false">Something went wrong, Please try again later!!!</string>
    <string name="err_msg_something_went_wrong" translatable="false">Something went wrong. Please logout and signin again.</string>
    <string name="lbl_not_available" translatable="false">N/A</string>
    <string name="btn_update" translatable="false">Update</string>
    <string name="lbl_all_rights_reserved" translatable="false">© All Rights Reserved</string>
    <string name="shortlist" translatable="false">Shortlist</string>
    <string name="message" translatable="false">Messages</string>
    <string name="chat" translatable="false">Message</string>
    <string name="send_interest" translatable="false">Connect</string>
    <string name="title_activity_dashboard" translatable="false">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="matches" translatable="false">Matches</string>
    <string name="interest" translatable="false">Interests</string>
    <string name="account" translatable="false">Home</string>
    <string name="recent" translatable="false">Recent</string>
    <string name="preferred" translatable="false">Preferred</string>
    <string name="viewed" translatable="false">Viewed</string>
    <string name="more" translatable="false">More</string>
    <string name="matches_based_on_your_set_preferences" translatable="false">According to preferences</string>
    <string name="edit_preferences" translatable="false">Set Partner Preferences</string>
    <string name="requested" translatable="false">Interest Sent</string>
    <string name="verified" translatable="false">VERIFIED</string>
    <string name="postedby" translatable="false">Posted By </string>
    <string name="delete" translatable="false">Delete</string>
    <string name="accept" translatable="false">Accept</string>
    <string name="reject" translatable="false">Reject</string>
    <string name="preview_amp_edit_profile" translatable="false"><![CDATA[Preview & Edit Profile]]></string>
    <string name="get_premium" translatable="false">GET PREMIUM</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="preferred_new" translatable="false">Preferred New</string>
    <string name="account_creation_tip_screen" translatable="false">The account has been created.\nAn email has been sent to the email address you entered while creating the account.
        Please check the email and activate your account. In case you are unable to find the email, please check your Junk / Spam folders.
        \nAfter activation, you should be able to login to the account with the registered email address &amp; the password you set for the account.
        \nOnce you login to your account, go the Settings Section to complete your profile, set your app settings &amp; set your partner preferences.\n\nWe wish you all the best to find your soul mate.</string>
    <string name="photo_guidelines" translatable="false"><b>Important</b>\n1. Your Photo should be front facing and Your full face should be visible.\n2. Photo uploaded should be very recent solo photo and not a group photo.\n3. Avoid photos with Sunglasses, Goggles, and way too fancy photos.\n4. Try to showcase the best of you. But be the real you.\n5. The most important - Smiling faces are the best. Have your best smile photo.\n\n<b>Very Important</b>\n1. Photo will be approved only after verification and screening.\n2. Photos showing any personal information will be rejected.\n3. Photos having watermark will be rejected.\n4. Photos which are morphed or digitally enhanced will be rejected.\n5. Photos which seem to be irrelevant will be rejected and will lead to suspension of account and membership.\n\n
    </string>
    <string name="upload_photo" translatable="false">Photo uploaded successfully. Photo will be approved only after verification.</string>
    <string name="dummy" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a</string>
    <string name="default_freemium_plan" translatable="false">Default Freemium Plan</string>
    <string name="view_premium_plans_upgrade" translatable="false">View Premium Plans</string>
    <string name="refresh_reload" translatable="false"><![CDATA[Refresh & Reload]]></string>
    <string name="misuse" translatable="false">We are sorry for the inconvenience.\nPlease mention the member\'s Profile ID who misused your profile along with as much as detailed information which you can give us about the misuse. That will help us to intervene well into the matter.\nIn case, you have observed some other member doing some irrelevant or fraudulent activity on this platform, you can mention their Profile ID and write to us in detail about your observation.\nYou can also reach us via the Contact Us section.</string>
    <string name="delete_profile" translatable="false">Please mention the reason you want to delete your account.\nWe would be glad to know if you are getting married and sad to know if you are leaving this platform for some other reason.
</string>
    <string name="newly_joined" translatable="false">Newly Joined</string>
    <string name="welcome_register" translatable="false">Welcome! Register</string>
    <string name="who_is_creating_the_account" translatable="false">Who is creating the Account</string>
    <string name="date_of_birth_dd_mm_yyyy" translatable="false">Date Of Birth (DD/MM/YYYY)</string>
    <string name="no_pending" translatable="false">No Pending Requests found</string>
    <string name="no_req_found" translatable="false">No Requests found.</string>
    <string name="no_messages_found" translatable="false">No Messages found. \nUse the message icon on a any profile to start chat messaging.\n Only Premium Membership can use the chat messaging service.</string>
    <string name="separete_family" translatable="false">A Nuclear family system is a family of two parents living with their children, also sometimes referred as Separate Family</string>
    <string name="joint_family" translatable="false">A Joint family system is family which extends beyond the nuclear family as it may include Grandparents, Uncles, Aunts, &amp; Cousins</string>
    <string name="error_send_msg" translatable="false">Your plan does not allow messaging. Please consider subscribing to other membership plans to send messages and connect to matches faster.</string>
    <string name="skip_now" translatable="false"><u>Skip Now</u></string>
    <string name="skip_new" translatable="false"><u>Skip </u></string>
    <string name="not_mentioned" translatable="false"><i><font color="#CDD1D2" translatable="false">Not Mentioned</font></i></string>
    <string name="app_version" translatable="false">App Version </string>
    <string name="built_version" translatable="false">Built Version </string>
    <string name="comming_version" translatable="false">Coming Soon</string>
    <string name="new_user_create_account" translatable="false">New User? Create Account</string>
    <string name="new_user_sign_up" translatable="false">New User?<font color="#F33E6D" translatable="false"> Create Account</font> </string>
    <string name="already_have_an_account_login" translatable="false">Already have an account? Login</string>
    <string name="mobile_no_profile_id_email_id" translatable="false">Mobile no. / Profile ID / Email ID</string>
    <string name="current_plan" translatable="false">Current Plan</string>
    <string name="membership" translatable="false">Membership</string>
</resources>